--- a/codigo_fuente/src/cliente/index.html
+++ b/codigo_fuente/src/cliente/index.html
@@ -11,7 +11,7 @@
     </head>
     <body class="bg-light">
         <!-- vista alertas -->
-        <div id="notification-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
+        <div id="alerta" class="position-fixed top-0 end-0 p-3" style="z-index: 1080;"></div>
 
         <header class="bg-dark text-white py-3 mb-4 shadow-sm">
         <div class="container">
@@ -29,17 +29,17 @@
         <main class="container mb-5">
         <!-- buscar cliente -->
         <section class="mb-4">
-            <form id="search-form" class="row g-2 align-items-center">
+            <form id="form-buscar" class="row g-2 align-items-center">
             <div class="col-sm-9 col-md-10">
                 <input
-                type="text"
-                id="search-input"
-                class="form-control"
-                placeholder="Buscar por nombre, apellidos o email..."
+                    type="text"
+                    id="input-buscar"
+                    class="form-control"
+                    placeholder="Buscar por email"
                 />
             </div>
             <div class="col-sm-3 col-md-2 d-grid">
-                <button type="submit" class="btn btn-dark" id="search-button">
+                <button type="submit" class="btn btn-dark" id="boton-buscar">
                 Buscar
                 </button>
             </div>
@@ -53,7 +53,7 @@
                 <strong>Alta de cliente</strong>
             </div>
             <div class="card-body">
-                <form id="create-form" novalidate>
+                <form id="form-crear" novalidate>
                 <div class="row g-3">
                     <div class="col-md-4">
                     <label for="nombre" class="form-label">Nombre *</label>
@@ -123,7 +123,7 @@
         <section>
             <div class="d-flex justify-content-between align-items-center mb-2">
             <h2 class="h5 mb-0">Listado de clientes</h2>
-            <small id="loading-indicator" class="text-muted d-none">
+            <small id="indicador-carga" class="text-muted d-none">
                 Cargando...
             </small>
             </div>
@@ -141,10 +141,10 @@
                         <th class="text-end">Acciones</th>
                     </tr>
                     </thead>
-                    <tbody id="clients-tbody"></tbody>
+                    <tbody id="tabla-body-clientes"></tbody>
                 </table>
                 </div>
-                <div id="empty-message" class="p-3 text-muted d-none">
+                <div id="mensaje-vacio" class="p-3 text-muted d-none">
                 No hay clientes registrados. Crea el primero desde el formulario superior.
                 </div>
             </div>
@@ -155,14 +155,14 @@
         <!-- modal modificar cliente -->
         <div
         class="modal fade"
-        id="editModal"
+        id="modal-editar"
         tabindex="-1"
         aria-labelledby="editModalLabel"
         aria-hidden="true"
         >
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
-            <form id="edit-form" novalidate>
+            <form id="form-editar" novalidate>
                 <div class="modal-header">
                 <h5 class="modal-title" id="editModalLabel">Editar cliente</h5>
                 <button
@@ -173,14 +173,14 @@
                 ></button>
                 </div>
                 <div class="modal-body">
-                <input type="hidden" id="edit-id" />
+                <input type="hidden" id="editar-id" />
                 <div class="row g-3">
                     <div class="col-md-4">
-                    <label for="edit-nombre" class="form-label">Nombre *</label>
+                    <label for="editar-nombre" class="form-label">Nombre *</label>
                     <input
                         type="text"
                         class="form-control"
-                        id="edit-nombre"
+                        id="editar-nombre"
                         required
                     />
                     <div class="invalid-feedback">
@@ -188,11 +188,11 @@
                     </div>
                     </div>
                     <div class="col-md-4">
-                    <label for="edit-apellidos" class="form-label">Apellidos *</label>
+                    <label for="editar-apellidos" class="form-label">Apellidos *</label>
                     <input
                         type="text"
                         class="form-control"
-                        id="edit-apellidos"
+                        id="editar-apellidos"
                         required
                     />
                     <div class="invalid-feedback">
@@ -200,11 +200,11 @@
                     </div>
                     </div>
                     <div class="col-md-4">
-                    <label for="edit-email" class="form-label">Email *</label>
+                    <label for="editar-email" class="form-label">Email *</label>
                     <input
                         type="email"
                         class="form-control"
-                        id="edit-email"
+                        id="editar-email"
                         required
                     />
                     <div class="invalid-feedback">
@@ -212,18 +212,18 @@
                     </div>
                     </div>
                     <div class="col-md-4">
-                    <label for="edit-telefono" class="form-label">Teléfono</label>
+                    <label for="editar-telefono" class="form-label">Teléfono</label>
                     <input
                         type="text"
                         class="form-control"
-                        id="edit-telefono"
+                        id="editar-telefono"
                     />
                     </div>
                     <div class="col-md-8">
-                    <label for="edit-notas" class="form-label">Notas</label>
+                    <label for="editar-notas" class="form-label">Notas</label>
                     <textarea
                         class="form-control"
-                        id="edit-notas"
+                        id="editar-notas"
                         rows="2"
                     ></textarea>
                     </div>
